<resources>
    <string name="app_name">Mi Formulario</string>
    <string name="titulo">Formulario</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="edad">Edad</string>
    <string name="correo">Correo</string>
    <string name="btnAceptar">Aceptar</string>
    <string name="titulo2">Mis datos</string>
    <string name="btnConfirmar">Volver</string>
    <string name="btnAbrirurl">Abrir página</string>
</resources>